# minigene

./: .gitignore  Cargo.toml  Jenkinsfile  README.md  clippy.toml
ai/: action_queue.md  ai_behavior.md  gunsmith.md  tables.md
ai/guidelines/: ecs.md
engine/minigene_bracket/src/: lib.rs
engine/minigene_collisions2/: Cargo.toml
engine/minigene_collisions2/src/: components.rs  lib.rs  resources.rs
engine/minigene_core/: Cargo.toml
engine/minigene_core/src/: lib.rs
engine/minigene_pathfinding2/: Cargo.toml
engine/minigene_pathfinding2/src/: lib.rs
engine/minigene_rendering2/: Cargo.toml
engine/minigene_rendering2/src/: lib.rs
engine/minigene_transform/src/: utils.rs
engine/minigene_utils/: Cargo.toml
engine/minigene_utils/src/: resources.rs
examples/: minimal.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
src/: commands.rs  components.rs  dice.rs  engine.rs  event.rs  lib.rs  macros.rs  pathfinding.rs  prelude.rs  render.rs  resources.rs  terminal.rs  utils.rs
src/data/: input_event.rs  keybinds.rs  keyboard_event.rs  mod.rs
src/dispatcher/: mod.rs  multi_thread.rs  single_thread.rs
src/systems/: ai_movement.rs  ai_pathing.rs  apply_effector.rs  combine_collision.rs  event_retrigger.rs  exec_skill.rs  goto_entity_simple.rs  goto_straight.rs  input_driver.rs  input_processor.rs  mod.rs  move_camera.rs  remove_outdated_effector.rs  skill_cooldown.rs  trigger_passive_skill.rs
