[package]
name = "minigene"
version = "0.6.1"
authors = ["Anne Kitsune <annekitsunefox@gmail.com>"]
edition = "2021"

[dependencies]

game_features = "0.8.1"
hibitset = "0.6.4"
derive-new = "0.7.0"
game_clock = "1.0.0"
stopwatch2 = "2.0.0"
planck_ecs = { version = "1.2.0", features = ["big_systems", "parallel"] }
oorandom = "11.1.4"
game_engine_core = "1.1.1"
planck_ecs_bundle = "1.1.0"
planck_game_features = { git = "https://github.com/jojolepro/planck_game_features" }

crossterm = { version = "0.28.1" }

