[package]
name = "minigene"
version = "0.7.0"
authors = ["Anne Kitsune <annekitsunefox@gmail.com>"]
edition = "2021"
description = "A minimalist terminal game engine."
license = "AGPL-3.0-or-later"

[dependencies]

game_features = "0.8.3"
hibitset = "0.6.4"
derive-new = "0.7.0"
game_clock = "1.1.1"
stopwatch2 = "2.0.0"
planck_ecs = { version = "1.2.1", features = ["big_systems", "parallel"] }
oorandom = "11.1.4"
game_engine_core = "1.1.2"
planck_ecs_bundle = "1.1.0"
planck_game_features = "0.1.0"
crossterm = { version = "0.28.1" }
uuidmap = "0.1"
